MyFirstForceProject/src/objects/Levis_shoes__c.object
<CustomObject>
    <description>Shoes sold by default</description>
    <fields>
        <fullName>Shoe_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shoe_Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shoe_URL__c</fullName>
        <description>URL for shoes image</description>
        <label>Shoe_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shoe_discount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Shoe_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shoe_price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>price without discount</description>
        <label>Shoe_price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoe_size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shoe_size</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoe_type__c</fullName>
        <defaultValue>&quot;Unspecified&quot;</defaultValue>
        <label>Shoe_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shoes_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shoes_quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Levis Shoes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Product_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levis Shoes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>